fez ate aqui as fun de agregar tarefa, eliminar tarefas e de check box, estou tentando fazer editar tarefas, so que tem um bug que estou resolvendo

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,18 @@
 /build
+.android/
+.bash_history
+.dotnet/
+.gradle/
+.vscode/
+AppData/
+Contacts/
+Desktop/
+Documents/
+Downloads/
+Favorites/
+NTUSER.DAT*
+OneDrive/
+Pictures/
+Saved Games/
+Searches/
+Videos/
